old/configs/argocd/templates/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: argocd.192.168.50.240.nip.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        path: /
